# Small-shell

./: CMakeLists.txt  README.md  main.c  smallsh.c  test_smallsh.sh
